fix: update package name to match PyPI package name (satisfactory-flow)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # pyproject.toml
 
 [project]
-name = "satflow"
+name = "satisfactory-flow"
 version = "0.0.0"
 description = "Automate your automations. Production flow calculations for Satisfactory."
 authors = [
