--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 license-files = ["LICENSE"]
 requires-python = ">=3.14"
 dependencies = [
+    "platformdirs (>=4.5.1,<5.0.0)"
 ]
 keywords = ["module", "packaging", "single-file"]
 # https://pypi.org/classifiers/
